--- a/react-hello.html
+++ b/react-hello.html
@@ -3,11 +3,12 @@
 <html>
 <head>
   <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
-  <title>Hello, World!</title>
+
+  <title></title>
 </head>
 <body>
-  <h1>
-    Hello, World!
-  </h1>
+  
+<div id="root">
+</div>
 </body>
 </html>
