--- a/react-hello.html
+++ b/react-hello.html
@@ -4,11 +4,15 @@
 <head>
   <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
 
+
   <title></title>
 </head>
 <body>
   
 <div id="root">
 </div>
+
+ <script src=" 
+ main.js"></script>
 </body>
 </html>
