--- a/react-hello.html
+++ b/react-hello.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-
 <html>
 <head>
   <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
 
-
+ <link rel="stylesheet" href="style.css">
   <title></title>
 </head>
+
 <body>
   
 <div id="root">
