--- a/react-hello.html
+++ b/react-hello.html
@@ -10,7 +10,7 @@
 <body>
   
 <div id="root">
-<h1>Hello,Everyone.What's Going On?</h1>
+<h1>Hello,Everyone.What's Going On! </h1>
 </div>
 
  <script src=" 
